--- a/app/scss/_shop.scss
+++ b/app/scss/_shop.scss
@@ -9,8 +9,6 @@
 .shop__slider {
     padding: 0 0 0 106px;
 }
-.shop__slider-item {
-}
 .shop__slider-inner {
     display: flex;
 }
@@ -34,6 +32,7 @@
 }
 .shop__slider-content {
     padding: 0px 0px 0px 170px;
+    margin-bottom: 240px;
     display: flex;
     align-items: flex-end;
 }
@@ -134,6 +133,7 @@
     }
 }
 .circle-row{
+    transition: all .3s;
     background-color: $blue;
     position: absolute;
     width: 12px;
@@ -181,7 +181,7 @@
 .shop{
     .contact-form{
       display: none;
-      top: 625%;
+      top: 631%;
       background-color: rgba(2, 12, 22, 0.65);
     }
     .contact-form input[type="text"], .contact-form input[type="email"], .contact-form textarea {
