--- a/app/scss/_contact.scss
+++ b/app/scss/_contact.scss
@@ -55,3 +55,10 @@
         cursor: pointer;
     }
 }
+.map-info__form{
+    .wrap {
+        width: 50%;
+        margin: 0 auto;
+        margin-bottom: 120px;
+    }
+}
