--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -38,13 +38,20 @@
         padding: 0px 0px 0px 344px;
     }
     .shop__slider__btn{
-        position: absolute;
-        right: 570px;
-        bottom: 60px;
+       display: none;
     }
     .shop{
+        .wrap{
+            margin-left: 51%;
+            margin-bottom: -100px;
+            margin-top: 240px;
+        }
         .contact-form{
-          top: 695%;
+          position: static;
+          display: inline-block;
+        }
+        .form-close{
+            display: none;
         }
     }
 }
@@ -166,11 +173,11 @@
             }
         }
     }
-    .shop{
+    /*.shop{
         .contact-form{
           top: 730%;
         }
-    }
+    }*/
 }
 
 
@@ -324,11 +331,11 @@
         width: 20px;
         left: -32px;
     }
-    .shop{
+    /*.shop{
         .contact-form{
           top: 760%;
         }
-    }
+    }*/
     .relax-form{
         .contact-form {
             top: 352%;
@@ -362,6 +369,14 @@
     }
     .shop{
         .contact-form{
+            padding: 0em;
+        }
+            wrap {
+            margin-top: 429px;
+        }
+    }
+    /*.shop{
+        .contact-form{
           top: 736%;
           padding: 0em;
         }
@@ -373,7 +388,7 @@
             top: 25px;
             right: 5px;
         }
-    }
+    }*/
 }
 
 
@@ -545,6 +560,14 @@
                     //- - - 803px - - -//
 @media (max-width: 803px){
     .shop{
+        .contact-form input[type="text"],.contact-form input[type="email"],.contact-form textarea{
+            width: 213%;
+        }
+        .styled-input input ~ span, .styled-input textarea ~ span {
+            display: none;
+        }
+    }
+    /*.shop{
         .contact-form{
           top: 733%;
         }
@@ -556,7 +579,7 @@
             top: -250px;
             right: -185px;
         }
-    }
+    }*/
     .relax-form{
         .contact-right span {
             top: 185px;
@@ -717,7 +740,7 @@
         padding: 29px 75px 40px 40px;
        }
    }
-   .shop__slider__btn {
+   /*.shop__slider__btn {
     right: 270px;
 }
     .shop{
@@ -732,7 +755,7 @@
             top: -250px;
             right: -185px;
         }
-    }
+    }*/
     .relax-form{
         .contact-right span {
             top: 185px;
@@ -796,6 +819,19 @@
             right: -146px;
         }
     }
+    .shop{
+        .wrap {
+            margin-left: 26%;
+        }
+        .contact-form{
+            border: none;
+        }
+        .contact-left {
+            float: none; 
+            width: 105%; 
+            margin: 0;
+        }
+    }
 }
 
 
@@ -857,7 +893,7 @@
 
                     //- - - 570px - - -//
  @media (max-width: 570px){
-    .shop{
+    /*.shop{
         .contact-form{
             top: 733%;
         }
@@ -869,7 +905,7 @@
             top: -260px;
             right: 20px;
         }
-    }
+    }*/
     .relax-form{
         .form-close:before{
             right: 5px;
@@ -1062,14 +1098,14 @@
         } 
     }
     //shop//
-    .shop__slider__btn {
+    /*.shop__slider__btn {
         right: 185px;
     }
     .shop{
         .contact-form{
             top: 818%;
         }
-    }
+    }*/
     //footer//
     .footer a {
         padding-right: 20px;
@@ -1180,7 +1216,7 @@
     .shop__slider-content {
         margin-bottom: 140px;
     }
-    .shop__slider__btn {
+   /* .shop__slider__btn {
         bottom: 0;
     }
     .shop{
@@ -1195,7 +1231,7 @@
             top: -226px;
             right: 20px;
         }
-    }
+    }*/
     //footer//
     .footer__cop {
         font-size: 10px;
@@ -1232,7 +1268,7 @@
     .sport {
         padding: 100px 0 0 0;
     }
-    .shop__slider__btn {
+    /*.shop__slider__btn {
         right: 105px;
     }
     .shop{
@@ -1247,7 +1283,7 @@
             top: -226px;
             right: 20px;
         }
-    }
+    }*/
 } 
 
 
