--- a/app/scss/_contact.scss
+++ b/app/scss/_contact.scss
@@ -22,6 +22,12 @@
         right: 356px;
     }
 }
+.map-iframe{
+    iframe{
+        width: 100%;
+        height: 700px;
+    }
+}
 .map-wrapper{
     background-color: rgba(255, 255, 255, 0.068);
     margin-bottom: 120px;
