--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -107,7 +107,8 @@ body.lock{
 }
 .header__menu {
     position: fixed;
-    top: -100%;
+    overflow: auto;
+    top: -200%;
     left: 0;
     width: 100%;
     height: 100%;
