--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1092,6 +1092,13 @@
             font-size: 14px;
         }
     }
+    .map{
+        .map-iframe{
+            iframe{
+                height: 350px;
+            }
+        }
+       }
  }
 
 
