--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -11,6 +11,8 @@ body{
     font-weight: 400;
     background-color: rgb(2, 12, 22);
     color: #FFFFFF;
+    min-width: 320px;
+    overflow-x: hidden;
 }
 a{
     display: inline-block;
