--- a/app/scss/_relax.scss
+++ b/app/scss/_relax.scss
@@ -27,6 +27,10 @@
             color: #fff;
         }
     } 
+    .header__title{
+        opacity: 1;
+        color: #eeeeee;
+    }
 }
 .relax-panel__collapse{
     display: none;
@@ -48,7 +52,7 @@
     ::after{
         content: "";
         background-image: url(../img/Down-Arrows.svg);
-        left: 605px;
+        left: 1205px;
         top: 16px;
         width: 30px; 
         height: 30px; 
@@ -62,7 +66,7 @@
     .slider-dots__clicks{
         position: absolute;
         top: 15px;
-        left: 635px;
+        left: 1235px;
     }
 }
 .relax-panel__heading.in p::after{
