implemented pictures in shop

--- a/app/scss/_shop.scss
+++ b/app/scss/_shop.scss
@@ -1,5 +1,5 @@
 .shop {
-    background-image: url(../img/shop/Shop-Image.png);
+    background-image: url(../img/shop/bg.png);
     background-position: right center;
     background-repeat: no-repeat;
     .title h3 {
