--- a/app/scss/_travel.scss
+++ b/app/scss/_travel.scss
@@ -1,6 +1,6 @@
 .travel{
     padding: 160px 0 360px 0;
-    background-image: url(../img/travel-cup.png);
+    background-image: url(../img/travel/travel-cup.png);
     background-position: bottom right;
     background-repeat: no-repeat;
     .slider-arrows{
