implemented all a href

--- a/app/scss/_contact.scss
+++ b/app/scss/_contact.scss
@@ -41,7 +41,7 @@
     margin: 0 auto;
     width: 50%;
     border: 1px solid rgba(255, 255, 255, 0.5);
-    background-color: rgba(2, 12, 22, 0.781);
+    background-color: rgb(0, 10, 19);
 }
 .block__left, .block__right{
     font-size: 28px;
